--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
     "@testing-library/user-event": "^12.8.3",
     "firebase": "^9.1.2",
     "heroku": "^7.59.0",
-    "node-sass": "^6.0.1",
+    "node-sass": "^9.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "redux": "^4.1.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-logger": "^3.0.6",
